--- a/documentation/thesis/thesis_abstract.tex
+++ b/documentation/thesis/thesis_abstract.tex
@@ -18,7 +18,6 @@ which implements all major aspects of acquisition, storage, analysis,
 and each intermediate step can be customized by the user without having
 to create everything from scratch, favoring an exchange between
 different user groups. Complete documentation, tutorials and tests
-enable users to use and adapt the FRamework as quickly as possible. The
-framework for the characterisation of different N45 neodymium magnets,
-which requires the integration of magnetic field sensors, was used for
-the evaluation.
+enable users to use and adapt the Framework as quickly as possible. The
+framework for the characterisation of different magnets, which requires
+the integration of magnetic field sensors, was used for the evaluation.
