--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -1,8 +1,18 @@
-
 \makeglossaries
 \newacronym{ic}{IC}{Integrated Circuit}
-
 \newacronym{mrp}{MRP}{MagneticReadoutProcessing}
 \newacronym{mri}{MRI}{Magnetic Resonance Imaging}
+\newacronym{rest}{REST}{Representational State Transfer}
+\newacronym{pc}{PC}{Personal Computer}
+\newacronym{ip}{IP}{Internet Protocol}
+\newacronym{usb}{USB}{Universal Serial Bus}
+\newacronym{ptp}{PTP}{Precision Time Protocol}
+\newacronym{pps}{PPS}{Puls Per Second}
+\newacronym{i2c}{I2C}{Inter-Integrated Circuit}
+\newacronym{cli}{CLI}{Command Line Interface}
+\newacronym{pip}{PIP}{Python Package Installer}
+\newacronym{hal}{HAL}{Hardware Abstraction Layer}
+\newacronym{pdf}{PDF}{Portable Document Format}
+\newacronym{html}{HTML}{Hypertext Markup Language}
 
 
