--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -59,13 +59,38 @@
 \hypertarget{sensor-selection}{%
 \section{Sensor selection}\label{sensor-selection}}
 
+\begin{longtable}[]{@{}lllll@{}}
+\caption{Implemented digital halleffect sensors
+\label{Implemented_digital_halleffect_sensors.csv}}\tabularnewline
+\toprule
+& TLV493D-A1B6 & HMC5883L & MMC5603NJ & AS5510\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+& TLV493D-A1B6 & HMC5883L & MMC5603NJ & AS5510\tabularnewline
+\midrule
+\endhead
+Readout-Axis & 3D & 3D & 3D & 1D\tabularnewline
+Temperature-Sensor & yes & no & yes & no\tabularnewline
+Resolution {[}uT{]} & 98 & 0.2 & 0.007 & 48\tabularnewline
+Range {[}mT{]} & ±130.0 & ±0.8 & ±3 & ±50\tabularnewline
+Interface & \gls{i2c} & \gls{i2c} & \gls{i2c} & \gls{i2c}\tabularnewline
+\bottomrule
+\end{longtable}
+
 \begin{itemize}
 \tightlist
 \item
-  list of typical low cost hall sensors
+  for higher ranges analog sensoren nutzen welche jedoch eine
+  aufwändigere schaltung erfodern
 \item
-  =\textgreater{} alle i2c in der regel
+  datenblatte links ergänzen
 \item
+  alle i2c in der regel, welches eine einfache integration ermöglicht
+\item
+  eingebauter temperatursensor ermöglicht temperaturkompensation
+\item
+  conrad teslameter mit seperaten temperatursensor
 \end{itemize}
 
 \hypertarget{mechanical-structure}{%
@@ -103,21 +128,31 @@
 \section{Firmware}\label{firmware}}
 
 \begin{itemize}
-\tightlist
 \item
-  automatic sensor detation
+  automatic sensor detation ablaufdiagramm erst nach i2c geräte scannen
+  dann analog versuchen
 \item
   serial cli support for manual mode
 \item
   sync impulse =\textgreater{} 1 mastersensor als taktqelle
 \item
-  interene mittelung und speichern der werte im buffer
+  interene mittelung und speichern der werte im buffer ringubber welcher
+  bei jedem sync impuls neu belegt wird
+\item
+  \begin{enumerate}
+  \def\labelenumi{\arabic{enumi}.}
+  \setcounter{enumi}{1}
+  \tightlist
+  \item
+    core übernimmt mittelung und auswetung
+  \end{enumerate}
 \item
   was durch den user implementiert werden muss klasse
 \end{itemize}
 
 \hypertarget{cli-interface}{%
-\subsection{CLI Interface}\label{cli-interface}}
+\subsection{\texorpdfstring{\gls{cli})
+Interface}{ Interface}}\label{cli-interface}}
 
 \begin{figure}
 \centering
@@ -127,9 +162,9 @@
 
 \begin{figure}
 \centering
-\includegraphics{./generated_images/border_Query_sensors_b_value_using_CLI.png}
-\caption{Query sensors b value using CLI
-\label{Query_sensors_b_value_using_CLI.png}}
+\includegraphics{./generated_images/border_Query_sensors_b_value_using_(+cli).png}
+\caption{Query sensors b value using \gls{cli}
+\label{Query_sensors_b_value_using_(+cli).png}}
 \end{figure}
 
 \begin{itemize}
@@ -143,8 +178,7 @@
 \end{itemize}
 
 \hypertarget{sensor-syncronsisation}{%
-\section{\texorpdfstring{Sensor Syncronsisation
-\label{CHAPTER_Sensor_Syncronsisation}}{Sensor Syncronsisation }}\label{sensor-syncronsisation}}
+\section{Sensor Syncronsisation}\label{sensor-syncronsisation}}
 
 \hypertarget{example-sensors}{%
 \section{Example Sensors}\label{example-sensors}}
@@ -281,18 +315,20 @@ Teslameter}\label{integration-of-an-professional-teslameter}}
 \hypertarget{multi-sensor-setup}{%
 \subsection{Multi-Sensor setup}\label{multi-sensor-setup}}
 
-At the moment, it is only possible to detect and use sensors that are
-directly connected to the PC with the library. This has the disadvantage
-that there must always be a physical connection. This can make it
-difficult to install multiple sensors in measurement setups where space
-or cable routing options are limited. To make sensors connected to a
-small remote PC available on the network, the `Proxy' module has been
-developed. This can be a single board computer (e.g.~a Raspberry Pi).
-The small footprint and low power consumption make it a good choice. It
-can also be used in a temperature chamber. The approach of implementing
-this via a REST interface also offers the advantage that several
-measurements or experiments can be recorded at the same time with the
-sensors.
+At the current state of implementation, it is only possible to detect
+and use sensors that are directly connected to the \gls{pc} with the
+library. This has the disadvantage that there must always be a physical
+connection. This can make it difficult to install multiple sensors in
+measurement setups where space or cable routing options are limited. To
+make sensors connected to a small \passthrough{\lstinline!remote!}
+\gls{pc} available on the network, the
+\passthrough{\lstinline!Proxy!}\ref{MRPlib_Proxy_Module.png} module has
+been developed. This can be a single board computer (e.g.~a Raspberry
+Pi). The small footprint and low power consumption make it a good
+choice. It can also be used in a temperature chamber. The approach of
+implementing this via a \gls{rest} interface also offers the advantage
+that several measurements or experiments can be recorded at the same
+time with the sensors.
 
 \begin{figure}
 \centering
@@ -303,7 +339,7 @@ sensors.
 Another application example is when sensors are physically separated or
 there are long distances between them. By connecting several sensors via
 the proxy module, it is possible to link several instances and all
-sensors available in the network are available to the control PC.
+sensors available in the network are available to the control \gls{pc}.
 
 \begin{figure}
 \centering
@@ -311,21 +347,24 @@ sensors available in the network are available to the control PC.
 \caption{mrp proxy multi \label{mrp_proxy_multi.png}}
 \end{figure}
 
-The graphic \ref{mrp_proxy_multi.png} shows the modified multi-proxy -
-multi-sensor topology. Here, both proxy instances do not communicate
-directly with the control PC, but remote PC \#2 is connected to remote
-PC \#1. This is then visible as a sensor opposite the Control PC, even
-if there are several proxy instances behind it.
+The graphic \ref{mrp_proxy_multi.png} shows the modified
+\passthrough{\lstinline!multi-proxy - multi-sensor!} topology. Here,
+both proxy instances do not communicate directly with the control
+\gls{pc}, but \passthrough{\lstinline!remote (+pc) \#2!} is connected to
+\passthrough{\lstinline!remote (+pc) \#1!}. This is then visible as a
+sensor opposite the Control \gls{pc}, even if there are several proxy
+instances behind it.
 
 \hypertarget{network-proxy}{%
 \subsubsection{Network-Proxy}\label{network-proxy}}
 
 The graphic \ref{MRPlib_Proxy_Module.png} shows the separation of the
-various HAL instances, which communicate with the physically connected
-sensors on the remote PC and the control PC side, which communicates
+various \gls{hal} instances, which communicate with the physically
+connected sensors on the \passthrough{\lstinline!remote!}-\gls{pc} and
+the \passthrough{\lstinline!control!}-\gls{pc} side, which communicates
 with the remote side via the network. For the user, nothing changes in
 the procedure for setting up a measurement. The proxy application must
-always be started on the remote PC side.
+always be started on the \passthrough{\lstinline!remote!} \gls{pc} side.
 
 \begin{lstlisting}[language=bash]
     # START PROXY INSTNACE WITH TWO LOCALLY CONNECTED SENSORS
@@ -337,7 +376,7 @@ always be started on the remote PC side.
 \end{lstlisting}
 
 After the proxy instance has been successfully started, it is optionally
-possible to check the status via the REST interface:
+possible to check the status via the \gls{rest} interface:
 
 \begin{lstlisting}[language=bash]
     # GET PROXY STATUS
@@ -374,13 +413,12 @@ possible to check the status via the REST interface:
 
 The query result shows that the sensors are connected correctly and that
 their capabilites have also been recognised correctly. To be able to
-configure a measurement on the other, only the IP address or host name
-of the remote PC is required:
+configure a measurement on the other, only the \gls{ip} address or host
+name of the remote \gls{pc} is required:
 
 \begin{lstlisting}[language=bash]
-    # CONFIGURE MEASUREMENT JOB USING A PROXY INSTANCE
-    $ python3 mrpproxy.py proxy launch /dev/ttySENSOR_A /dev/ttySENSOR_B
-    
+  # CONFIGURE MEASUREMENT JOB USING A PROXY INSTANCE
+  $ python3 mrpproxy.py proxy launch /dev/ttySENSOR_A /dev/ttySENSOR_B
 \end{lstlisting}
 
 \hypertarget{sensor-syncronisation}{%
@@ -389,16 +427,16 @@ of the remote PC is required:
 Another important aspect when using several sensors via the proxy system
 is the synchronisation of the measurement intervals between the sensors.
 Individual sensor setups do not require any additional synchronisation
-information, as this is communicated via the USB interface. If several
-sensors are connected locally, they can be connected to each other via
-their sync input using short cables. One sensor acts as the central
-clock (see chapter \ref{CHAPTER_Sensor_Syncronsisation}). However, this
-no longer works for long distances and a diversion must be made via the
-network connection.
+information, as this is communicated via the \gls{usb} interface. If
+several sensors are connected locally, they can be connected to each
+other via their sync input using short cables. One sensor acts as the
+central clock (see chapter \ref{sensor-syncronsisation}). However, this
+no longer works for long distances and the syncronisation must be made
+via the network connection.
 
-If time-critical synchronisation is required, PTP and PPS functionality
-can be used on many single-board computers (such as the RaspberryPi
-Compute Module).
+If time-critical synchronisation is required, \gls{ptp} and \gls{pps}
+output functionality can be used on many single-board computers, such as
+the RaspberryPi Compute Module.
 
 \begin{itemize}
 \tightlist
@@ -444,6 +482,13 @@ Compute Module).
 \section{Programmable data processing
 pipeline}\label{programmable-data-processing-pipeline}}
 
+\begin{figure}
+\centering
+\includegraphics{./generated_images/border_example_measurement_analysis_pipeline.png}
+\caption{example measurement analysis pipeline
+\label{example_measurement_analysis_pipeline.png}}
+\end{figure}
+
 \begin{itemize}
 \tightlist
 \item
@@ -458,12 +503,13 @@ pipeline}\label{programmable-data-processing-pipeline}}
 \end{itemize}
 
 \begin{lstlisting}
+# pipeline_example_measurement_processing.yaml
 settings:
  enabled: true
  export_intermediate_results: false
- name: pipeline_analyse_fullsphere
+ name: pipeline_example_measurement_processing
 
-stage import:
+stage import_readings:
  function: import_readings
  parameters:
    IP_input_folder: ./readings/fullsphere/
@@ -473,54 +519,202 @@ stage import_bias_reading:
  function: import_readings
  parameters:
    IP_input_folder: ./readings/fullsphere/
-   IP_file_regex: BIAS_(.)*.mag.json
+   IP_file_regex: bias_reading.mag.json
 
 stage apply_bias_offset:
  function: apply_sensor_bias_offset
  parameters:
    bias_readings: stage import_bias_reading
-   readings_to_calibrate: stage import
+   readings_to_calibrate: stage import_readings
+
+stage apply_temp_compensation:
+ function: apply_temperature_compensation
+ parameters:
+   readings_to_calibrate: stage import_readings
 
 stage plot_normal_bias_offset:
  function: plot_readings
  parameters:
-   readings_to_plot: stage apply_bias_offset
-   IP_export_folder: ./readings/fullsphere/plots/normal/calibrated/
+   readings_to_plot: stage apply_temp_compensation
+   IP_export_folder: ./readings/fullsphere/plots/
    IP_plot_headline_prefix:  Sample N45 12x12x12 magnets calibrated
 
-stage plot_fullsphere:
- function: plot_fullsphere
+stage export_readings:
+ function: export_readings
  parameters:
-   readings_to_plot: stage apply_bias_offset
-   IP_export_folder: ./readings/fullsphere/plots/normal/calibrated/
-   IP_plot_headline_prefix:  Sample N45 12x12x12 magnets calibrated
+   readings_to_plot: stage apply_temp_compensation
+   IP_export_folder: ./readings/fullsphere/plots/
 \end{lstlisting}
 
-\hypertarget{web-base-pipeline-configuration}{%
-\subsection{Web base pipeline
-configuration}\label{web-base-pipeline-configuration}}
+\hypertarget{package-distribution}{%
+\section{Package distribution}\label{package-distribution}}
+
+\begin{figure}
+\centering
+\includegraphics{./generated_images/border_MagneticReadoutProcessing_library_hosted_on_PyPi.png}
+\caption{MagneticReadoutProcessing library hosted on PyPi
+\label{MagneticReadoutProcessing_library_hosted_on_PyPi.png}}
+\end{figure}
+
+One important point that improves usability for users is the simple
+installation of the library. As it was created in the Python programming
+language, there are several public package directories where users can
+provide their software modules. Here,
+\passthrough{\lstinline!PyPi!}\cite{PyPI}\ref{MagneticReadoutProcessing_library_hosted_on_PyPi.png}\cite{MagneticReadoutProcessingPyPI}
+is the most commonly used package directory and offers direct support
+for the package installation programm \gls{pip}.
+
+In doing so, \gls{pip} not only manages possible package dependencies,
+but also manages the installation of different versions of a package. In
+addition, the version compatibility is also checked during the
+installation of a new package, which can be resolved manually by the
+user in the event of conflicts.
+
+\begin{lstlisting}[language=bash]
+  # https://pypi.org/project/MagneticReadoutProcessing/
+  # install the latest version
+  $ pip3 install MagneticReadoutProcessing
+  # install the specific version 1.4.0
+  $ pip3 install MagneticReadoutProcessing==1.4.0
+\end{lstlisting}
+
+To make the library compatible with the package directory, Python
+provides separate installation routines that build a package in an
+isolated environment and then provide an installation
+\passthrough{\lstinline!wheel!} archive. This can then be uploaded to
+the package directory.
+
+Since the library requires additional dependencies
+(e.g.~\passthrough{\lstinline!numpy!},
+\passthrough{\lstinline!matplotlib!}), which cannot be assumed to be
+already installed on the target system, these must be installed prior to
+the actual installation. These can be specified in the library
+installation configuration \passthrough{\lstinline!setup.py!} for this
+purpose.
+
+\begin{lstlisting}[language=Python]
+  # $ cat ./setup.py
+
+  # dynamic requirement loading using 'requirements.txt'
+  req_path = 'requirements.txt'
+  with pathlib.Path(req_path).open() as requirements_txt:
+      install_requires = [str(requirement) for requirement in pkg_resources.parse_requirements(requirements_txt)]
+
+  setup(name='MagneticReadoutProcessing',
+        version='1.4.3',
+        url='https://github.com/LFB-MRI/MagnetCharacterization/',
+        packages= ['MRP', 'MRPcli', 'MRPudpp', 'MRPproxy'],
+        install_requires=install_requires,
+        include_package_data=True,
+        package_data={"": ["**/*.mag.json", "**/*.yaml", "**/*.html", "**/*.js", "**/*.css", "**/*.md", "**/*.json", "**/*.ts", "**/*.xml"]},
+        entry_points={
+            'console_scripts': [
+              'MRPCli = MRPcli.cli:run',
+              'MRPUdpp = MRPudpp.uddp:run',
+              'MRPproxy = MRPproxy.mrpproxy:run'
+            ]
+        }
+      )
+\end{lstlisting}
+
+To make the \gls{cli} scripts written in Python easier for the user to
+execute without having to use the \passthrough{\lstinline!python3!}
+prefix. This has been configured in the installation configuration using
+the \passthrough{\lstinline!entry\_points!} option, and the following
+commands are available to the user:
 
 \begin{itemize}
 \tightlist
 \item
-  drag\& drop system
+  \passthrough{\lstinline!MRPcli --help!} instead of
+  \passthrough{\lstinline!python3 cli.py --help!}
 \item
-  automatische convertierung zum yaml system
+  \passthrough{\lstinline!MRPudpp --help!} instead of
+  \passthrough{\lstinline!python3 udpp.py --help!}
+\item
+  \passthrough{\lstinline!MRPproxy --help!} instead of
+  \passthrough{\lstinline!python3 proxy.py --help!}
 \end{itemize}
 
-\hypertarget{package-management}{%
-\section{Package management}\label{package-management}}
-
-\begin{itemize}
-\tightlist
-\item
-  verteilung durch paketmanager
-\item
-  docker cli beispiel
-\end{itemize}
+In addition, these commands are available globally in the system without
+the terminal shell being located in the library folder.
 
 \hypertarget{documentation}{%
 \subsection{Documentation}\label{documentation}}
+
+\begin{figure}
+\centering
+\includegraphics{./generated_images/border_MagneticReadoutProcessing_documentation_hosted_on_ReadTheDocs.png}
+\caption{MagneticReadoutProcessing documentation hosted on ReadTheDocs
+\label{MagneticReadoutProcessing_documentation_hosted_on_ReadTheDocs.png}}
+\end{figure}
+
+In order to provide comprehensive documentation for the user, the source
+code was documented using
+Python-\passthrough{\lstinline!docstrings!}\cite{PythonDocstringReference}.
+This includes, among other things:
+
+\begin{itemize}
+\tightlist
+\item
+  Function description
+\item
+  Input parameters - \passthrough{\lstinline!param!} and
+  \passthrough{\lstinline!type!}
+\item
+  Return value - \passthrough{\lstinline!returns!},
+  \passthrough{\lstinline!rtype!}
+\end{itemize}
+
+\begin{lstlisting}[language=Python]
+    # MRPDataVisualisation.py - example docstring
+    def plot_temperature(_readings: [MRPReading.MRPReading], _title: str = '', _filename: str = None, _unit: str = "degree C") -> str:
+        """
+        Plots a temperature plot of the reading data as bar-graph figure
+
+        :param _readings: readings to plot
+        :type _readings: list(MRPReading.MRPReading)
+
+        :param _title: Title text of the figure, embedded into the head
+        :type _title: str
+
+        :param _filename: export graphic to an given absolute filepath with .png
+        :type _filename: str
+
+        :returns: returns the filepath of the generated .png image file
+        :rtype: str
+        """
+
+        if _readings is None or len(_readings) <= 0:
+            raise MRPDataVisualizationException("no readings in _reading given")
+        num_readings = len(_readings)
+        # ...
+\end{lstlisting}
+
+Since `docstrings' only document the source code, but do not provide
+simple how-to-use instructions, the documentation framework
+\passthrough{\lstinline!Sphinx!}\cite{SphinxDocumentation} was used
+for this purpose. This framework makes it possible to generate
+\gls{html} or \gls{pdf} documentation from various source code
+documentation formats, such as the used
+\passthrough{\lstinline!docstrings!}. These are converted into a
+Markdown format in an intermediate step and this also allows to add
+further user documentation such as examples or installation
+instructions.
+
+In order to make the documentation created by
+\passthrough{\lstinline!Sphinx!} accessible to the user, there are, as
+with the package management by \passthrough{\lstinline!PyPi!} services,
+which provide Python library documentation online.
+
+\cite{ReadTheDocs}
+
+\cite{MagneticReadoutProcessingReadTheDocs}
+
+\ref{MagneticReadoutProcessing_documentation_hosted_on_ReadTheDocs.png}
+
+\hypertarget{tests}{%
+\subsection{Tests}\label{tests}}
 
 \hypertarget{evaluation}{%
 \chapter{Evaluation}\label{evaluation}}
