--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -10,6 +10,53 @@ url = {https://www.din.de/de/mitwirken/normenausschuesse/naerg/veroeffentlichung
 
 
 
+@misc{PyPI,
+author = {Python Software Foundation},
+title = {PyPi - The Python Package Index (PyPI) is a software directory for the Python programming language.},
+year = {01.01.2024},
+url = {https://pypi.org},
+}
+
+@misc{ReadTheDocs,
+author = {Read the Docs, Inc},
+title = {ReadTheDocs - Build, host, and share documentation, all with a single platform.},
+year = {01.01.2024},
+url = {https://readthedocs.com},
+}
+
+@misc{MagneticReadoutProcessingPyPI,
+author = {Python Software Foundation},
+title = {MagneticReadoutProcessing - PyPi},
+year = {01.01.2024},
+url = {https://pypi.org/project/MagneticReadoutProcessing/},
+}
+
+@misc{MagneticReadoutProcessingReadTheDocs,
+author = {Read the Docs, Inc},
+title = {MagneticReadoutProcessing - ReadTheDocs},
+year = {01.01.2024},
+url = {https://magneticreadoutprocessing.readthedocs.io/en/latest/index.html},
+}
+
+
+@misc{PythonDocstringReference,
+author = {Python Software Foundation},
+title = {Python Enhancement Proposals - Docstring Conventions},
+year = {01.01.2024},
+url = {https://peps.python.org/pep-0257/},
+}
+
+@misc{SphinxDocumentation,
+author = {Sphinx developers},
+title = {Sphinx makes it easy to create intelligent and beautiful documentation.},
+year = {01.01.2024},
+url = {https://www.sphinx-doc.org/en/master/},
+}
+
+https://www.sphinx-doc.org/en/master/
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%
 % Bücher
 %%%%%%%%%%%%%%%%%%%%%%%%
