--- a/documentation/thesis/thesis_titleinformation.tex
+++ b/documentation/thesis/thesis_titleinformation.tex
@@ -2,7 +2,7 @@
 \arbeitstyp{Master Thesis}
 \fachbereich{Electrical Engineering and Information Technology}
 \studiengang{Information Systems Engineering}
-\vertiefung{Systems and management}
+\vertiefung{}
 \titel{Development of a hardware and software framework for the automated characterization
 of permanent magnets
 for low-field MRI systemsg}
@@ -10,6 +10,6 @@ for low-field MRI systemsg}
 \matrnr{3120232}
 \betreuer{Prof. Dr.-Ing. Thomas Dey}
 \cobetreuer{Prof. Dr.-Ing. Volkmar Schulz}
-%\extbetreuer{- extbetreuer -}
+\extbetreuer{}
 \datum{01.01.2024}
-%\dank{- dank -}
+\dank{}
