--- a/documentation/thesis/thesis.tex
+++ b/documentation/thesis/thesis.tex
@@ -219,8 +219,8 @@
 
 %%MOD%%
 % Einige Anpassungen müssen nach \begin{document} stehen !!
-\renewcaptionname{ngerman}{\figurename}{\textbf Bild} 	% Bild ... statt Abbildung ...
-\renewcaptionname{ngerman}{\contentsname}{Inhalt}% Inhalt statt Inhaltsverzeichnis
+\renewcaptionname{ngerman}{\figurename}{\textbf Figure} 	% Bild ... statt Abbildung ...
+\renewcaptionname{ngerman}{\contentsname}{Contents}% Inhalt statt Inhaltsverzeichnis
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Titel im FH Style
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
