--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -14,5 +14,5 @@
 \newacronym{hal}{HAL}{Hardware Abstraction Layer}
 \newacronym{pdf}{PDF}{Portable Document Format}
 \newacronym{html}{HTML}{Hypertext Markup Language}
-
+\newacronym{ide}{IDE}{Integrated development environment}
 
