--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -1,14 +1,4 @@
 
-@misc{din9241,
-author = {Deutsche Institut für Normung e. V.},
-title = {DIN EN ISO 9241-220
-Ergonomie der Mensch-System-Interaktion - Teil 220},
-year = {04.04.2021},
-url = {https://www.din.de/de/mitwirken/normenausschuesse/naerg/veroeffentlichungen/wdc-beuth:din21:289443385},
-}
-
-
-
 
 @misc{PyPI,
 author = {Python Software Foundation},
@@ -53,9 +43,23 @@ year = {01.01.2024},
 url = {https://www.sphinx-doc.org/en/master/},
 }
 
-https://www.sphinx-doc.org/en/master/
 
 
+@misc{PyTest,
+author = {Holger Krekel and pytest-dev team},
+title = {pytest: helps you write better programs},
+year = {01.01.2024},
+url = {https://docs.pytest.org/en/7.4.x/},
+}
+
+
+@misc{GithubActions,
+author = {GitHub, Inc.},
+title = {Github Actions - Automate your workflow
+from idea to production},
+year = {01.01.2024},
+url = {https://github.com/features/actions},
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%
 % Bücher
