--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -153,14 +153,13 @@ Interface & \gls{i2c} & \gls{i2c} & \gls{i2c} & \gls{i2c}\tabularnewline
   was durch den user implementiert werden muss klasse
 \end{itemize}
 
-\hypertarget{cli-interface}{%
-\subsection{\texorpdfstring{\gls{cli})
-Interface}{ Interface}}\label{cli-interface}}
+\hypertarget{user-interface}{%
+\subsection{User-Interface}\label{user-interface}}
 
 \begin{figure}
 \centering
-\includegraphics{./generated_images/border_Sensors_CL-Interface.png}
-\caption{Sensors CL-Interface \label{Sensors_CL-Interface.png}}
+\includegraphics{./generated_images/border_Sensors_(+cli).png}
+\caption{Sensors \gls{cli} \label{Sensors_(+cli).png}}
 \end{figure}
 
 \begin{figure}
@@ -367,21 +366,23 @@ connected sensors on the \passthrough{\lstinline!remote!}-\gls{pc} and
 the \passthrough{\lstinline!control!}-\gls{pc} side, which communicates
 with the remote side via the network. For the user, nothing changes in
 the procedure for setting up a measurement. The proxy application must
-always be started on the \passthrough{\lstinline!remote!} \gls{pc} side.
+always be started\ref{lst:mrpcli_proxy_start} on the
+\passthrough{\lstinline!remote!} \gls{pc} side.
 
-\begin{lstlisting}[language=bash]
-    # START PROXY INSTNACE WITH TWO LOCALLY CONNECTED SENSORS
-    $ python3 mrpproxy.py proxy launch /dev/ttySENSOR_A /dev/ttySENSOR_B # add another proxy instance http://proxyinstance_2.local for multi-sensor, multi-proxy chain
-    Proxy started. http://0.0.0.0:5556/
-    PRECHECK: SENSOR_HAL: 1337 # SENSOR A FOUND
-    PRECHECK: SENSOR_HAL: 4242 # SENSOR B FOUND
-    Terminate  Proxy instance [y/N] [n]: 
+\begin{lstlisting}[language=bash, caption={MRPproxy usage to enable local sensor usage over network}, label=lst:mrpcli_proxy_start]
+# START PROXY INSTNACE WITH TWO LOCALLY CONNECTED SENSORS
+$ python3 mrpproxy.py proxy launch /dev/ttySENSOR_A /dev/ttySENSOR_B # add another proxy instance http://proxyinstance_2.local for multi-sensor, multi-proxy chain
+Proxy started. http://remotepc.local:5556/
+PRECHECK: SENSOR_HAL: 1337 # SENSOR A FOUND
+PRECHECK: SENSOR_HAL: 4242 # SENSOR B FOUND
+Terminate  Proxy instance [y/N] [n]: 
 \end{lstlisting}
 
 After the proxy instance has been successfully started, it is optionally
-possible to check the status via the \gls{rest} interface:
+possible to check the status via the \gls{rest}
+interface:\ref{lst:mrpcli_config_rest}
 
-\begin{lstlisting}[language=bash]
+\begin{lstlisting}[language=bash, caption={MRPproxy REST enpoiint query examples}, label=lst:mrpcli_config_rest]
     # GET PROXY STATUS
     $ wget http://proxyinstance.local:5556/proxy/status
     {
@@ -417,11 +418,14 @@ possible to check the status via the \gls{rest} interface:
 The query result shows that the sensors are connected correctly and that
 their capabilites have also been recognised correctly. To be able to
 configure a measurement on the other, only the \gls{ip} address or host
-name of the remote \gls{pc} is required:
+name of the remote \gls{pc} is
+required\ref{lst:mrpcli_config_using_rpc}.
 
-\begin{lstlisting}[language=bash]
-  # CONFIGURE MEASUREMENT JOB USING A PROXY INSTANCE
-  $ python3 mrpproxy.py proxy launch /dev/ttySENSOR_A /dev/ttySENSOR_B
+\begin{lstlisting}[language=bash, caption={MRPcli usage example to connect with a network sensor}, label=lst:mrpcli_config_using_rpc]
+# CONFIGURE MEASUREMENT JOB USING A PROXY INSTANCE
+$ MRPcli config setupsensor testcfg --path http://proxyinstance.local:5556
+> remote sensor connected: True using proxy connection:
+> http://proxyinstance.local:5556 with 1 local sensor connected
 \end{lstlisting}
 
 \hypertarget{sensor-syncronisation}{%
@@ -468,18 +472,72 @@ the RaspberryPi Compute Module.
 \hypertarget{usability-improvements}{%
 \chapter{Usability improvements}\label{usability-improvements}}
 
-\hypertarget{commandline-interface}{%
-\section{Commandline interface}\label{commandline-interface}}
+\hypertarget{command-line-interface}{%
+\section{Command Line Interface}\label{command-line-interface}}
+
+\begin{figure}
+\centering
+\includegraphics{./generated_images/border_MRP_(+cli)_output_to_configure_a_new_measurement.png}
+\caption{MRP \gls{cli} output to configure a new measurement
+\label{MRP_(+cli)_output_to_configure_a_new_measurement.png}}
+\end{figure}
+
+In the first version of this library, the user had to write his own
+Python scripts even for short measurement and visualisation tasks.
+However, this was already time-consuming for reading out a sensor and
+configuring the measurement parameters and metadata and quickly required
+more than 100 lines of new Python code. Although such examples are
+provided in the documentation, it must be possible for programming
+beginners in particular to use them. To simplify these tasks, a
+\gls{cli}\ref{example_measurement_analysis_pipeline.png} was implemented
+around this library, which is then also supplied as a fixed component.
+This \gls{cli} implements the following functionalities:
 
 \begin{itemize}
 \tightlist
 \item
-  automatische sensor dedettion
+  Detection of connected sensors
 \item
-  planung verschiedener messungen mit untersch. hardware
+  Configuration of measurement series
 \item
-  zentrale abarbeitung
+  Recording of measured values from stored measurement series
+\item
+  Simple commands for checking recorded measurement series and their
+  data.
 \end{itemize}
+
+Thanks to this functionality of the \gls{cli}, it is now possible to
+connect a sensor to the \gls{pc}, configure a measurement series with it
+and run it at the end. The result is then an exported file with the
+measured values. These can then be read in again with the library and
+processed further. The following\ref{lst:mrpcli_config_run} bash code
+shows this procedure in detail:
+
+\begin{lstlisting}[language=bash, caption={CLI example for configuring a measurement run}, label=lst:mrpcli_config_run]
+# CLI EXAMPLE FOR CONFIGURING A MEASUREMENT RUN
+## CONFIGURE THE SENSOR TO USE
+$ MRPcli config setupsensor testcfg
+> 0 - Unified Sensor 386731533439 - /dev/cu.usbmodem3867315334391
+> Please select one of the found sensors [0]:
+> sensor connected: True 1243455
+## CONFIGURE THE MEASUREMENT
+$ MRPcli config setup testcfg
+> CONFIGURE testcfg
+> READING-NAME: [testreading]: testreading
+> OUTPUT-FOLDER [/cli/reading]: /tmp/reading_folder_path
+> NUMBER DATAPOINTS: [1]: 10
+> NUMBER AVERAGE READINGS PER DATAPOINT: [1]: 100
+# RUN THE CONFIGURED MEASUREMENT
+$ MRPcli measure run
+> STARTING MEASUREMENT RUN WITH FOLLOWING CONFIGS: ['testcfg']
+> config-test: OK
+> sensor-connection-test: OK
+> START MEASUREMENT CYCLE
+> sampling 10 datapoints with 100 average readings
+> SID:0 DP:0 B:47.359mT TEMP:23.56
+> ....
+> dump_to_file testreading_ID:525771256544952_SID:0_MAG:N45_CUBIC_12x12x12.mag.json
+\end{lstlisting}
 
 \hypertarget{programmable-data-processing-pipeline}{%
 \section{Programmable data processing
@@ -507,60 +565,46 @@ pipeline}\label{programmable-data-processing-pipeline}}
   geladen und stehen nutzer zur verfühung
 \end{itemize}
 
-\begin{lstlisting}
-# pipeline_example_measurement_processing.yaml
-settings:
- enabled: true
- export_intermediate_results: false
- name: pipeline_example_measurement_processing
-
+\begin{lstlisting}[caption={Example User Defined Processing Pipeline}]
 stage import_readings:
- function: import_readings
- parameters:
-   IP_input_folder: ./readings/fullsphere/
-   IP_file_regex: 360_(.)*.mag.json
+  function: import_readings
+  parameters:
+    IP_input_folder: ./readings/fullsphere/
+    IP_file_regex: 360_(.)*.mag.json
 
 stage import_bias_reading:
- function: import_readings
- parameters:
-   IP_input_folder: ./readings/fullsphere/
-   IP_file_regex: bias_reading.mag.json
+  function: import_readings
+  parameters:
+    IP_input_folder: ./readings/fullsphere/
+    IP_file_regex: bias_reading.mag.json
 
 stage apply_bias_offset:
- function: apply_sensor_bias_offset
- parameters:
-   bias_readings: stage import_bias_reading
-   readings_to_calibrate: stage import_readings
+  function: apply_sensor_bias_offset
+  parameters:
+    bias_readings: stage import_bias_reading
+    readings_to_calibrate: stage import_readings
 
 stage apply_temp_compensation:
- function: apply_temperature_compensation
- parameters:
-   readings_to_calibrate: stage import_readings
+  function: apply_temperature_compensation
+  parameters:
+    readings_to_calibrate: stage import_readings
 
 stage plot_normal_bias_offset:
- function: plot_readings
- parameters:
-   readings_to_plot: stage apply_temp_compensation
-   IP_export_folder: ./readings/fullsphere/plots/
-   IP_plot_headline_prefix:  Sample N45 12x12x12 magnets calibrated
+  function: plot_readings
+  parameters:
+    readings_to_plot: stage apply_temp_compensation
+    IP_export_folder: ./readings/fullsphere/plots/
+    IP_plot_headline_prefix:  Sample N45 12x12x12 magnets calibrated
 
 stage export_readings:
- function: export_readings
- parameters:
-   readings_to_plot: stage apply_temp_compensation
-   IP_export_folder: ./readings/fullsphere/plots/
+  function: export_readings
+  parameters:
+    readings_to_plot: stage apply_temp_compensation
+    IP_export_folder: ./readings/fullsphere/plots/
 \end{lstlisting}
 
 \hypertarget{tests}{%
 \section{Tests}\label{tests}}
-
-\begin{figure}
-\centering
-\includegraphics{./generated_images/border_MRP_library_test_results_for_different_submodules_executed_in_PyCharm_(+ide).png}
-\caption{MRP library test results for different submodules executed in
-PyCharm \gls{ide}
-\label{MRP_library_test_results_for_different_submodules_executed_in_PyCharm_(+ide).png}}
-\end{figure}
 
 Software tests in libraries offer numerous advantages for improving
 quality and efficiency. Firstly, they enable the identification of
@@ -570,50 +614,58 @@ applications. Tests also ensures consistent and reliable performance,
 which is particularly important when libraries are used by different
 users and for different usecases.
 
+\begin{figure}
+\centering
+\includegraphics{./generated_images/border_MRP_library_test_results_for_different_submodules_executed_in_PyCharm_(+ide).png}
+\caption{MRP library test results for different submodules executed in
+PyCharm \gls{ide}
+\label{MRP_library_test_results_for_different_submodules_executed_in_PyCharm_(+ide).png}}
+\end{figure}
+
 During the development of the library, test cases were also created for
 all important functionalities and use cases. The test framework
 \passthrough{\lstinline!PyTest!}\cite{PyTest} was used for this
 purpose, as it offers direct integration in most \gls{ide}s (see
 \ref{MRP_library_test_results_for_different_submodules_executed_in_PyCharm_(+ide).png})
 and also because it provides detailed and easy-to-understand test
-reports as output in order to quickly identify and correct errors. Since
+reports as output in order to quickly identify and correct errors. It
+also allows to tag tests, which is useful for grouping tests or
+excluding certain tests in certain build environment scenarios. Since
 all intended use cases were mapped using the test cases created, the
 code of the test cases could later be used in slightly simplified
-variants as examples for the documentation.
+variants\ref{lst:pytest_example_code} as examples for the documentation.
 
-\begin{lstlisting}[language=Python]
+\begin{lstlisting}[language=Python, caption={Example pytest class for testing MRPReading module functions}, label=lst:pytest_example_code]
 # $ cat test_mrpreading.py
 class TestMPRReading(unittest.TestCase):
-    # PREPARE A INITIAL CONFIGURATION FILE FOR ALL FOLLOWING TEST CASES IN THIS FILE
-    def setUp(self) -> None:
-        self.import_export_test_folderpath: str = os.path.join(os.path.dirname(os.path.abspath(__file__)), "tmp")
-        self.import_export_test_filepath:str = os.path.join(self.import_export_test_folderpath, "tmp")
+  # PREPARE A INITIAL CONFIGURATION FILE FOR ALL FOLLOWING TEST CASES IN THIS FILE
+  def setUp(self) -> None:
+      self.test_folder: str = os.path.join(os.path.dirname(os.path.abspath(__file__)), "tmp")
+      self.test_file:str = os.path.join(self.import_export_test_folderpath, "tmp")
 
-    def test_matrix(self):
-        reading: MRPReading = MRPSimulation.MRPSimulation.generate_reading()
-        matrix: np.ndarray = reading.to_numpy_matrix()
-        n_phi: float = reading.measurement_config.n_phi
-        n_theta: float = reading.measurement_config.n_theta
-        # CHECK MATRIX SHAPE
-        self.assertTrue(matrix.shape != (n_theta, ) and len(matrix.shape) <= n_phi)
+  def test_matrix(self):
+      reading: MRPReading = MRPSimulation.generate_reading()
+      matrix: np.ndarray = reading.to_numpy_matrix()
+      n_phi: float = reading.measurement_config.n_phi
+      n_theta: float = reading.measurement_config.n_theta
+      # CHECK MATRIX SHAPE
+      self.assertTrue(matrix.shape != (n_theta,))
+      self.assertTrue(len(matrix.shape) <= n_phi))
 
-    def test_export_reading(self) -> None:
-        reading: MRPReading = self.test_reading_init()
-        self.assertIsNotNone(reading)
-        # EXPORT READING TO A FILE
-        reading.dump_to_file(self.import_export_test_filepath)
+  def test_export_reading(self) -> None:
+      reading: MRPReading = self.test_reading_init()
+      self.assertIsNotNone(reading)
+      # EXPORT READING TO A FILE
+      reading.dump_to_file(self.test_file)
 
-    def test_import_reading(self):
-        # CREATE EMPTY READING
-        reading_imported:MRPReading = MRPReading.MRPReading(None)
-        # LOAD READING FROM FILE
-        reading_imported.load_from_file(self.import_export_test_filepath)
-        # CHECK IF ENTRIES ARE POPULATED
-        self.assertIsNotNone(reading_imported.additional_data)
-        self.assertIsNotNone(reading_imported.data)
-
-if __name__ == '__main__':
-    unittest.main()
+  def test_import_reading(self):
+      # CREATE EMPTY READING
+      reading_imported:MRPReading = MRPReading.MRPReading(None)
+      # LOAD READING FROM FILE
+      reading_imported.load_from_file(self.test_file)
+      # CHECK IF ENTRIES ARE POPULATED
+      self.assertIsNotNone(reading_imported.additional_data)
+      self.assertIsNotNone(reading_imported.data)
 \end{lstlisting}
 
 One problem, however, is the parts of the library that require direct
@@ -643,7 +695,8 @@ language, there are several public package directories where users can
 provide their software modules. Here,
 \passthrough{\lstinline!PyPi!}\cite{PyPI}\ref{MagneticReadoutProcessing_library_hosted_on_PyPi.png}\cite{MagneticReadoutProcessingPyPI}
 is the most commonly used package directory and offers direct support
-for the package installation programm \gls{pip}.
+for the package installation programm
+\gls{pip}\ref{lst:setup_lib_with_pip}.
 
 \begin{figure}
 \centering
@@ -658,12 +711,12 @@ addition, the version compatibility is also checked during the
 installation of a new package, which can be resolved manually by the
 user in the event of conflicts.
 
-\begin{lstlisting}[language=bash]
-  # https://pypi.org/project/MagneticReadoutProcessing/
-  # install the latest version
-  $ pip3 install MagneticReadoutProcessing
-  # install the specific version 1.4.0
-  $ pip3 install MagneticReadoutProcessing==1.4.0
+\begin{lstlisting}[language=bash, caption={Bash commands to install the MagneticReadoutProcessing library using pip}, label=lst:setup_lib_with_pip]
+# https://pypi.org/project/MagneticReadoutProcessing/
+# install the latest version
+$ pip3 install MagneticReadoutProcessing
+# install the specific version 1.4.0
+$ pip3 install MagneticReadoutProcessing==1.4.0
 \end{lstlisting}
 
 To make the library compatible with the package directory, Python
@@ -677,32 +730,29 @@ Since the library requires additional dependencies
 \passthrough{\lstinline!matplotlib!}), which cannot be assumed to be
 already installed on the target system, these must be installed prior to
 the actual installation. These can be specified in the library
-installation configuration \passthrough{\lstinline!setup.py!} for this
+installation configuration
+\passthrough{\lstinline!setup.py!}\ref{lst:setup_py_req} for this
 purpose.
 
-\begin{lstlisting}[language=Python]
-  # $ cat ./setup.py
+\begin{lstlisting}[language=Python, caption={setup.py with dynamic requirement parsing used given requirements.txt}, label=lst:setup_py_req]
+# dynamic requirement loading using 'requirements.txt'
+req_path = './requirements.txt'
+with pathlib.Path(req_path).open() as requirements_txt:
+    install_requires = [str(requirement) for requirement in pkg_resources.parse_requirements(requirements_txt)]
 
-  # dynamic requirement loading using 'requirements.txt'
-  req_path = 'requirements.txt'
-  with pathlib.Path(req_path).open() as requirements_txt:
-      install_requires = [str(requirement) for requirement in pkg_resources.parse_requirements(requirements_txt)]
-
-  setup(name='MagneticReadoutProcessing',
-        version='1.4.3',
-        url='https://github.com/LFB-MRI/MagnetCharacterization/',
-        packages= ['MRP', 'MRPcli', 'MRPudpp', 'MRPproxy'],
-        install_requires=install_requires,
-        include_package_data=True,
-        package_data={"": ["**/*.mag.json", "**/*.yaml", "**/*.html", "**/*.js", "**/*.css", "**/*.md", "**/*.json", "**/*.ts", "**/*.xml"]},
-        entry_points={
-            'console_scripts': [
-              'MRPCli = MRPcli.cli:run',
-              'MRPUdpp = MRPudpp.uddp:run',
-              'MRPproxy = MRPproxy.mrpproxy:run'
-            ]
-        }
-      )
+setup(name='MagneticReadoutProcessing',
+      version='1.4.3',
+      url='https://github.com/LFB-MRI/MagnetCharacterization/',
+      packages= ['MRP', 'MRPcli', 'MRPudpp', 'MRPproxy'],
+      install_requires=install_requires,
+      entry_points={
+          'console_scripts': [
+            'MRPCli = MRPcli.cli:run',
+            'MRPUdpp = MRPudpp.uddp:run',
+            'MRPproxy = MRPproxy.mrpproxy:run'
+          ]
+      }
+    )
 \end{lstlisting}
 
 To make the \gls{cli} scripts written in Python easier for the user to
@@ -747,34 +797,29 @@ and the Python3.5 type annotations:
   \passthrough{\lstinline!rtype!}
 \end{itemize}
 
-\begin{lstlisting}[language=Python]
+The use of type annotations also simplifies further development, as
+modern \gls{ide}s can more reliably display possible methods to the user
+as an assistance.\ref{pydocstring}
+
+\begin{lstlisting}[language=Python, caption={Python docstring example}, label=lst:pydocstring]
     # MRPDataVisualisation.py - example docstring
     def plot_temperature(_readings: [MRPReading.MRPReading], _title: str = '', _filename: str = None, _unit: str = "degree C") -> str:
         """
-        Plots a temperature plot of the reading data as bar-graph figure
-
+        Plots a temperature plot of the reading data as figure
         :param _readings: readings to plot
         :type _readings: list(MRPReading.MRPReading)
-
         :param _title: Title text of the figure, embedded into the head
         :type _title: str
-
         :param _filename: export graphic to an given absolute filepath with .png
         :type _filename: str
-
-        :returns: returns the abs filepath of the generated .png image file
+        :returns: returns the abs filepath of the generated file
         :rtype: str
         """
-
         if _readings is None or len(_readings) <= 0:
             raise MRPDataVisualizationException("no readings in _reading given")
         num_readings = len(_readings)
         # ...
 \end{lstlisting}
-
-The use of type annotations also simplifies further development, as
-modern \gls{ide}s can more reliably display possible methods to the user
-as an assistance.
 
 Since `docstrings' only document the source code, but do not provide
 simple how-to-use instructions, the documentation framework
